# MNN

./: .gitignore  .gitmodules  CMakeLists.txt
scdet/: CMakeLists.txt  scdet.py  scdet_py.cpp
scdet_demo/: CMakeLists.txt  README.md  modify_onnx.py  scdet_demo.cpp
schema/current/: MNN_generated.h
schema/default/: MNN.fbs
softsplat/: CMakeLists.txt  README.md  softsplat_demo.cpp
source/backend/coreml/backend/: CoreMLOPRegister.cpp
source/backend/cpu/: CPUCustomSoftsplat.cpp  CPUCustomSoftsplat.hpp  CPUOPRegister.cpp
source/backend/nnapi/backend/: NNAPIOPRegister.cpp
source/backend/opencl/core/: OpenCLOPRegister.cpp
source/backend/opencl/core/runtime/: OpenCLRuntime.cpp
source/backend/opencl/execution/buffer/: CustomSoftsplatBufExecution.cpp  CustomSoftsplatBufExecution.hpp
source/backend/opencl/execution/cl/: attention_buf_mnn_cl.cpp  buffer_convert_quant_mnn_cl.cpp  custom_softsplat_buf.cl  custom_softsplat_buf_mnn_cl.cpp  opencl_source_map.hpp
source/geometry/: GeometryOPRegister.cpp  GeometryStridedSlice.cpp
source/shape/: ShapeCustomSoftsplat.cpp  ShapeRegister.cpp
tariff/: CMakeLists.txt  tariff.py  tariff_py.cpp
tariff_demo/: CMakeLists.txt  README.md  feat_demo.cpp  fusion_demo.cpp  tariff_py.cpp
tools/converter/source/onnx/: CustomSoftsplat.cpp
tools/script/: register.py
