# message(STATUS "MNN Depends:" ${MNN_DEPS})
set(SVFI_SCDET_DEMO "")

add_executable(scdet_demo.out ${CMAKE_CURRENT_LIST_DIR}/scdet_demo.cpp)
list(APPEND SVFI_SCDET_DEMO scdet_demo.out)

foreach(TARGET ${SVFI_SCDET_DEMO})
    target_link_libraries(${TARGET} ${MNN_DEPS})
    if (MSVC)
        target_compile_definitions(${TARGET} PRIVATE "_CRT_SECURE_NO_WARNINGS")
        if (NOT MNN_BUILD_SHARED_LIBS)
            foreach (DEPEND ${MNN_DEPS})
                target_link_options(${TARGET} PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:${DEPEND}>)
            endforeach ()
        endif()
    endif()
endforeach()
