# message(STATUS "MNN Depends:" ${MNN_DEPS})
set(SVFI_TARIFF "")

set(PYBIND11_PYTHON_VERSION 3.11)
set(pybind11_DIR "D:/60-fps-Project/Projects/RIFE GUI/venv/Lib/site-packages/pybind11/share/cmake/pybind11")
set(PYTHON_EXECUTABLE "D:/60-fps-Project/Projects/RIFE GUI/venv/Scripts/python.exe")
find_package(pybind11 CONFIG REQUIRED)
list(APPEND SVFI_TARIFF tariff_mnn)
pybind11_add_module(tariff_mnn ${CMAKE_CURRENT_LIST_DIR}/tariff_py.cpp)

foreach(TARGET ${SVFI_TARIFF})
    target_link_libraries(${TARGET} PRIVATE ${MNN_DEPS})
    if (MSVC)
        target_compile_definitions(${TARGET} PRIVATE "_CRT_SECURE_NO_WARNINGS")
        if (NOT MNN_BUILD_SHARED_LIBS)
            foreach (DEPEND ${MNN_DEPS})
                target_link_options(${TARGET} PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:${DEPEND}>)
            endforeach ()
        endif()
    endif()
endforeach()
